# docker

medium-flask-app/: Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml
